<resources>
    <string name="app_name">Go4Lunch</string>

    <string name="facebook_application_id" translatable="false">6958376004235357</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb6958376004235357</string>

    <string name="lunch_spot_fab" translatable="false">Fab to choose a lunch spot</string>
    <string name="location_fab" translatable="false">Fab to set map camera on user location</string>

    <string name="bnm_map_view" translatable="false">Map View</string>
    <string name="bnm_list_view" translatable="false">List View</string>
    <string name="bnm_workmates" translatable="false">Workmates</string>
    <string name="bnm_chat" translatable="false">Chat</string>

    <string name="nav_hungry">I\'m Hungry!</string>
    <string name="nav_workmates">Available Workmates</string>
    <string name="nav_chat">Chat with your workmates</string>

    <string name="label_detail">Place Details</string>
    <string name="label_settings">Settings</string>

    <string name="nd_your_lunch">YOUR LUNCH</string>
    <string name="nd_settings">SETTINGS</string>
    <string name="nd_logout">LOGOUT</string>

    <string name="detail_call" translatable="false">CALL</string>
    <string name="detail_like" translatable="false">LIKE</string>
    <string name="detail_unlike" translatable="false">UNLIKE</string>
    <string name="detail_website" translatable="false">WEBSITE</string>

    <string name="no_user_email">No email address found</string>
    <string name="no_username">No username found</string>
    <string name="no_joining_workmate">No workmate is eating in this place</string>
    <string name="no_opening_hours">Opening hours not available</string>
    <string name="no_phone_number">No phone number found for this place</string>
    <string name="no_website">No website found for this place</string>

    <string name="update_name">Update your username</string>
    <string name="update_hint">New username</string>
    <string name="update_done">Your username has been updated</string>
    <string name="new_name_needed">Please specify your new username</string>
    <string name="delete_account">Delete your account</string>
    <string name="delete_account_popup">Do you really want to delete your account?</string>

    <string name="location_permission_required">Location permission is required for this app</string>
    <string name="location_permission_rationale">Access to the location service is required for this app, which displays restaurants in your surrounding area</string>
    <string name="location_permission_denied">This app requires location permission to work efficiently. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings </string>
    <string name="location_update">Location updated</string>

    <string name="select_place">Select a type of place</string>

    <string name="distance" translatable="false">%1$d m</string>
    <string name="workmate_counter" translatable="false">(%1$d)</string>
    <string name="closed">Closed</string>
    <string name="open">Open now</string>

    <string name="not_selected">You haven\'t selected a place for lunch yet</string>
    <string name="not_decided">%1$s hasn\'t decided yet</string>
    <string name="decided">%1$s is eating at</string>
    <string name="decided_lunch_spot" translatable="false">%1$s</string>
    <string name="joining">%1$s is joining!</string>

    <string name="fetching_data">Fetching data…</string>

    <string name="fav_add">This place has been added to your Favorites</string>
    <string name="fav_remove">This place has been removed from your Favorites</string>
    <string name="lunch_spot_add">You\'re going to this place for lunch</string>
    <string name="lunch_spot_remove">You\'re not going to this place for lunch anymore</string>

    <string name="msg_input">Type your message</string>

    <string name="search" translatable="false">Search</string>
    <string name="search_hint">Search for restaurants</string>

    <string name="and">and</string>
    <string name="notification_text">You\'re lunching at %1$s, located at %2$s, with %3$s</string>
    <string name="notification_title">Don\'t forget your lunch today!</string>
    <string name="switch_text">Lunch Notifications</string>
</resources>