<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_map"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/bnm_map_view" />
    <item
        android:id="@+id/nav_list"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_view_list_24"
        android:title="@string/bnm_list_view" />
    <item
        android:id="@+id/nav_workmates"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_people_24"
        android:title="@string/bnm_workmates" />
    <item
        android:id="@+id/nav_chat"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_chat_24"
        android:title="@string/bnm_chat" />

</menu>