<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/setting_toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/label_settings" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/setting_update_btn"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="@string/update_name"
            app:icon="@drawable/ic_baseline_update_24" />

        <LinearLayout
            android:id="@+id/setting_update_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/setting_update_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/green_light"
                    android:hint="@string/update_hint"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/setting_ok_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:backgroundTint="@color/green_light"
                android:text="@string/ok"
                android:textColor="@color/black" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/setting_delete_btn"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/red"
            android:text="@string/delete_account"
            app:icon="@drawable/ic_baseline_delete_24" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>